# processing-of-meteorological-data

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_gen.py  main.cpp
doc/cz/: dokumentace.tex
include/: czmap_svg.h  data_loader.h  data_processor.h  data_types.h  output_generator.h
src/: data_loader.cpp  data_processor.cpp  output_generator.cpp
tests/: conftest.py  pytest.ini  requirements.txt  test_build.py  test_output.py
tests/results/meteodata/: anomalies.csv  vykyvy.csv
tests/results/meteodata_large/: anomalies.csv  vykyvy.csv
tests/results/meteodata_medium/: anomalies.csv  vykyvy.csv
